--- a/MovieGallery/src/css/MovieCard.css
+++ b/MovieGallery/src/css/MovieCard.css
@@ -9,6 +9,10 @@
   flex-direction: column;
 }
 
+.active {
+  color: red;
+}
+
 .movie-card:hover {
   transform: translateY(-5px);
 }
@@ -94,6 +98,7 @@
 .movie-info h3 {
   font-size: 1rem;
   margin: 0;
+  color: white;
 }
 
 .movie-info p {
